BUG: 196108

Use KDE's locale/calendar settings for the Group Header in aggregations

svn path=/trunk/KDE/kdepim/; revision=1019109