messagelistview/core/model.cpp
@@ -61,6 +61,7 @@
 #include <QScrollBar>
 
 #include <KLocale>
+#include <KCalendarSystem>
 #include <KGlobal>
 #include <KDebug>
 #include <kcursorsaver.h>
@@ -1229,34 +1230,6 @@ void Model::syncExpandedStateOfSubtree( Item *root )
   }
 }
 
-static inline QString get_capitalized_long_day_name( int dayOfWeek )
-{
-  // The day name should be capitalized in the group labels
-  // This fixes some complaints from translators that have mapped
-  // their standard day names to lowercase versions for general
-  // use but still want them to be capitalized in the headers...
-  QString name = QDate::longDayName( dayOfWeek );
-  if ( name.isEmpty() )
-    return name;
-  QString copy = name;
-  copy[ 0 ] = name.at( 0 ).toUpper();
-  return copy;
-}
-
-static inline QString get_capitalized_month_name( int month )
-{
-  // The month name should be capitalized in the group labels
-  // This fixes some complaints from translators that have mapped
-  // their standard month names to lowercase versions for general
-  // use but still want them to be capitalized in the headers...
-  QString name = QDate::longMonthName( month );
-  if ( name.isEmpty() )
-    return name;
-  QString copy = name;
-  copy[ 0 ] = name.at( 0 ).toUpper();
-  return copy;
-}
-
 void Model::attachMessageToGroupHeader( MessageItem *mi )
 {
   QString groupLabel;
@@ -1312,24 +1285,12 @@ void Model::attachMessageToGroupHeader( MessageItem *mi )
         if ( dateWeekNumber == todayWeekNumber )
         {
           // within this week
-          groupLabel = get_capitalized_long_day_name( dDate.dayOfWeek() );
+          groupLabel = KGlobal::locale()->calendar()->weekDayName( dDate );
         } else {
-          // not this week
-          // FIXME: After 4.2 think about a configurable date format.
-          //        At the moment KMime::DateFormatter doesn't support date-only formatting.
-          //        KDateTime is not better than QDate in this case.
-          //        A configurable date-only format should be probably tweaked into KMime::DateFormatter
-          //        but this can't be done with the string freeze in effect.
-          groupLabel = dDate.toString( Qt::DefaultLocaleShortDate );
+          groupLabel = KGlobal::locale()->formatDate( dDate, KLocale::ShortDate );
         }
       } else {
-        // not within this month
-        // FIXME: After 4.2 think about a configurable date format.
-        //        At the moment KMime::DateFormatter doesn't support date-only formatting.
-        //        KDateTime is not better than QDate in this case.
-        //        A configurable date-only format should be probably tweaked into KMime::DateFormatter
-        //        but this can't be done with the string freeze in effect.
-        groupLabel = dDate.toString( Qt::DefaultLocaleShortDate );
+        groupLabel = KGlobal::locale()->formatDate( dDate, KLocale::ShortDate );
       }
 
     }
@@ -1382,7 +1343,7 @@ void Model::attachMessageToGroupHeader( MessageItem *mi )
         if ( dateWeekNumber == todayWeekNumber )
         {
           // within this week
-          groupLabel = get_capitalized_long_day_name( dDate.dayOfWeek() );
+          groupLabel = KGlobal::locale()->calendar()->weekDayName( dDate );
         } else {
           // previous weeks
           int weekDiff = todayWeekNumber - dateWeekNumber;
@@ -1411,10 +1372,12 @@ void Model::attachMessageToGroupHeader( MessageItem *mi )
         )
         {
           // group by months, this year (so no year appended)
-          groupLabel = get_capitalized_month_name( dDate.month() );
+          groupLabel = KGlobal::locale()->calendar()->monthName( dDate );
         } else {
           // group by months
-          groupLabel = QString( "%1 %2" ).arg( get_capitalized_month_name( dDate.month() ) ).arg( dDate.year() );
+          groupLabel = QString( "%1 %2" )
+            .arg( KGlobal::locale()->calendar()->monthName( dDate ) )
+            .arg( dDate.year() );
         }
       }
     }
